Fix JSDoc
